# eletronica-digital-sist-embarcados

./: .gitignore  CMakeLists.txt  README.md
01_eletronica_digital/01_display_7seg/: diagram.json
01_eletronica_digital/02_multiplos_displays_7seg/: about.md  sketch.ino
01_eletronica_digital/03_soma_wifi_displays/: about.md  exibirNumDigitos.ino
01_eletronica_digital/04_semaforo_wifi/: sketch.ino
02_sistemas_embarcados/: .gitignore
02_sistemas_embarcados/01_pisca_led_frequencia/: about.md  diagram.json  sketch.ino
02_sistemas_embarcados/02_led_freq_botao/: about.md  diagram.json  sketch.ino
02_sistemas_embarcados/03_led_rgb/: about.md  sketch.ino
02_sistemas_embarcados/04_led_rgb_wifi/: about.md  diagram.json  sketch.ino
02_sistemas_embarcados/05_ldr_led_freq/: about.md  diagram.json  sketch.ino
02_sistemas_embarcados/06_ldr_memoria/: .gitignore  partitions.csv
02_sistemas_embarcados/07_wifi_connect/: CMakeLists.txt
02_sistemas_embarcados/10_projeto_final_avaliativo/: CMakeLists.txt  about.md  readme.md
02_sistemas_embarcados/10_projeto_final_avaliativo/main/: 10_projeto_final_avaliativo.c  CMakeLists.txt  buzzer_control.c  buzzer_control.h  mq5_sensor.c  mq5_sensor.h  mqtt_manager.c  mqtt_manager.h  wifi_manager.c  wifi_manager.h
elet-digital/esp32-e-display7segmentos-wowki/: sketch.ino
esp32-e-display7segmentos-wowki/: about.md
esp32-e-multiplosdisplays7segmentos-soma/: somaPorWifi.ino
esp32-e-multiplosdisplays7segmentos-wowki/: diagram.json
esp32-ledsSemaforico-wifi-wowki/: about.md
main/: CMakeLists.txt  leitor_ldr.c
(+7 files in other folders)
